--- a/contact.html
+++ b/contact.html
@@ -48,11 +48,11 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Home</a></li>
+          <li><a class="active" href="index.html">Home</a></li>
           <li><a href="aboute.html">About</a></li>
-          <li><a class="active" href="blog.html">Blog</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="Blog.html">Blog</a></li>
+          <li><a href="Team.html">Team</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
@@ -122,8 +122,9 @@
 
   <main id="main">
         <!-- ======= About Section ======= -->
-        <section id="Blog" class="about bg-light-subtle rounded">
+        <section id="about" class="about bg-light-subtle rounded">
           <div class="container">
+    
             <div class="row">
               <div class="col-lg-6">
                 <div class="rounded-circle">
