--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="artikel.html">Rekaman</a></li>
+          <li><a href="artikel.html">Rekaman kegiatan</a></li>
           <li><a href="#Kegiatan">Kegiatan</a></li>
-          <li><a href="#team">Team</a></li>
+          <li><a href="team.html">Team</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -141,9 +141,7 @@
                 </p>
                 <h3>Visi</h3>
                 <ul>
-                  <li><i class="bi bi-check-circle"></i> meningkatkan kepedulian sosial dan lingkungan dalam kehidupan sehari-hari..</li>
-                  <!-- <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li> -->
-                  <!-- <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li> -->
+                  <li><i class="bi bi-check-circle"></i> meningkatkan kepedulian sosial dan lingkungan dalam kehidupan sehari-hari.</li>
                 </ul>
                 <h3>Misi</h3>
                 <ul>
