--- a/artikel.html
+++ b/artikel.html
@@ -51,9 +51,9 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="" href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="artikel.html">Blog</a></li>
+          <li><a class="active" href="artikel.html">Blog</a></li>
           <li><a href="#Kegiatan">Kegiatan</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
