--- a/index.html
+++ b/index.html
@@ -128,6 +128,10 @@
         <!-- ======= About Section ======= -->
         <section id="aboute" class="about bg-light-subtle rounded">
           <div class="container">
+            <div class="section-title">
+              <h2>About</h2>
+              <h3>Community And Organization</h3>
+            </div>
     
             <div class="row">
               <div class="col-lg-6">
@@ -136,9 +140,8 @@
                 </div>
               </div>
               <div class="col-lg-6 mt-lg-0 content">
-                <!-- <h3>community and organization.</h3> -->
-                <p class="fst-italic">
-                  <span>Pringgaya Gelamang</span> adalah sebuah organisasi yang didirikan pada tahun 2015 oleh sekelompok teman masa sekolah yang sebelumnya aktif dalam organisasi Pramuka. Awalnya, mereka secara tidak sengaja melakukan pertemuan dan diskusi yang kemudian berkembang menjadi sebuah organisasi yang fokus pada kegiatan sosial dan lingkungan. <a href="about.html">Tampilkan selengkapnya</a>
+                <p>
+                  <span>Pringgaya Gelamang</span> sebuah organisasi yang didirikan pada tahun 2015 oleh sekelompok teman masa sekolah yang sebelumnya aktif dalam organisasi Pramuka. Awalnya, mereka secara tidak sengaja melakukan pertemuan dan diskusi yang kemudian berkembang menjadi sebuah organisasi yang fokus pada kegiatan sosial dan lingkungan. <a href="about.html">Tampilkan selengkapnya</a>
                 </p>
                 <h3>Visi</h3>
                 <ul>
