--- a/index.html
+++ b/index.html
@@ -175,13 +175,19 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch rounded">
             <div class="member">
               <img src="assets/img/sharebook.jpg" alt="">
-              <h4>SHARE THE LOVE</h4>
+              <h3>SHARE THE LOVE</h3>
               <p>"SHARE THE LOVE 💖"  
                 Mari kita berbagi buku untuk anak-anak di Lombok, membantu memperluas wawasan mereka dan menginspirasi minat baca yang lebih besar.
                 'Pringgabaya Gelamang' telah terhubung dengan banyak anak di pelosok desa, dan setiap bulan kami bertemu dengan mereka untuk belajar dan bermain bersama.
                 'Pringgabaya Gelamang' telah mendirikan 'Bale Belajar Anak Kampung' (BABEAK) di Desa Pringgabaya, tepatnya di Dusun Dasan Bantek. Ini akan menjadi pusat belajar bagi anak-anak di sekitarnya.
                 Jika Anda ingin membantu, silakan hubungi kami dan bergabunglah dalam gerakan ini. <a href="https://www.instagram.com/tv/B-YeXd6pOb1/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">Detail Kegiatan</a> Matur tampi asih semeton... 🙏"                  
-              </p>            
+              </p>   
+              
+              <div class="icon-donasi">
+                <a href="">
+                  <h3>DONASI SEKARANG</h3>
+                </a>
+              </div>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
@@ -193,8 +199,13 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/jumat.png" alt="">
-              <h4>Donasi Jumat Berkah</h4>
+              <h3>DONASI JUMAT BERKAH</h3>
               <p>"Setiap Jumat adalah kesempatan untuk membuat perbedaan. Sumbangkan sebagian dari apa yang Anda miliki dalam kegiatan donasi 'Jumat Berkah' kami dan jadilah alasan tersenyum bagi mereka yang membutuhkan."<a href="https://www.instagram.com/reel/CmNsbqOsw8z/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==" target="_blank">Detail Kegiatan</a></p>
+              <div class="icon-donasi">
+                <a href="">
+                  <h3>DONASI SEKARANG</h3>
+                </a>
+              </div>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
@@ -207,9 +218,15 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
               <img src="assets/img/GelamangBerbagi.jpg" alt="">
-              <h4>Gelamang berbagi</h4>
+              <h3>GELAMANG BERBAGI</h3>
               <p>Ketika sudah tua, tenaga kita sudah tidak sekuat dahulu lagi, begitu pula dengan waktu yang kita miliki tidak bisa lagi digunakan secara sembarangan. Banyak yang sudah menginjak usia tua mengungkapkan kehidupan-kehidupan yang mereka miliki. Rentan, begitulah kehidupan Tua kita nanti, siap atau tidak, kenyataan itu harus diterima. <a href="https://www.instagram.com/p/CAOwb_8pK0m/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">Detail Kegiatan</a></p>
 
+              <div class="icon-donasi">
+                <a href="">
+                  <h3>DONASI SEKARANG</h3>
+                </a>
+              </div>
+              
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
