--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                   <h3>DONASI SEKARANG</h3>
                 </a>
               </div>
-              
+
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
@@ -241,6 +241,28 @@
       </div>
     </section>
     <!-- ====== Donasi  -->
+    <!-- ======= Clients Section ======= -->
+    <section id="clients" class="clients">
+      <div class="container">
+
+        <div class="section-title">
+          <h2>Clients</h2>
+          <p>"Kami merasa terhormat bermitra dengan jaringan media ternama dan komunitas yang peduli, dalam menjalankan misi kami untuk membawa inspirasi dan perubahan yang positif. 
+            Dengan dukungan dari kalian semua, kami dapat merangkul keberagaman, membangun hubungan yang berkelanjutan, dan memberikan dampak yang nyata bagi masyarakat. Kami bersyukur atas kolaborasi yang telah terjalin, dan kami berkomitmen untuk terus bekerja sama demi kebaikan bersama. "</p>
+        </div>
+
+        <div class="clients-slider swiper">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide"><img src="assets/img/clients/bakti-pemuda.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/sekolah-alam.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/bakti-pemuda.png" class="img-fluid" alt=""></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+    </section>
+    <!-- End Clients Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
