--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="artikel.html">Rekaman kegiatan</a></li>
-          <li><a href="#Kegiatan">Kegiatan</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav>
@@ -321,7 +319,7 @@
 
     <!--===== blog=== -->
 
-    
+
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients">
       <div class="container">
